# gcg-consistency-training

./: .gitignore  README.md  pyproject.toml
src/gcg_consistency_training/: config.py  modal_app.py  pgd_suffix.py
src/gcg_eval/: config.py  modal_app.py  pgd_suffix.py
