[project]
name = "gcg-consistency-training"
version = "0.1.0"
description = "PGD suffix optimization for sycophancy reduction (negative result)"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "accelerate>=0.27.0",
    "modal>=0.67.0",
    "pydantic>=2.0.0",
    "wandb>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gcg_consistency_training"]
